# training_log_app

./: .dockerignore  .gitignore  README.md  __main__.py  add_trainings_from_csv.py  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: actions.yml
auth/: Dockerfile  pyproject.toml
auth/src/auth/: __main__.py  config.py  server.py  utils.py
auth/src/auth/api/: userController.py
auth/src/auth/models/: customException.py  customResponseModel.py  kennel.py  tokens.py  user.py
auth/src/auth/repositories/: IUserRepository.py  kennelRepository.py  userRepository.py
auth/src/auth/services/: userService.py
auth/tests/: conftest.py
auth/tests/test_controller/: test_user_controller.py
auth/tests/test_repositories/: test_kennel_repo.py  test_user_repo.py
auth/tests/test_service/: test_user_service.py
docker/: Dockerfile  Dockerfile.app  Dockerfile.testdb  docker-compose.cloud.yaml  docker-compose.test.yaml  docker-compose.yaml
frontend/: Dockerfile  components.json  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  vite.config.js
frontend/src/: App.tsx  index.css  main.tsx
sql_scripts/: 1-migration-unique-weather.sql  2-add-gps-coordinates-to-location.sql  create_table.sql  test_auth_module_entries.sql  test_init_entries.sql
src/: calculation_helpers.py  config.py  constants.py  controller.py  deps.py  main.py  models.py  orm.py  repository.py  test_models.py  utils.py
src/api/: activity_controller.py  analytics_controller.py  (+6 more)
tests/: conftest.py  test_calculation_helpers.py  test_models.py  test_orm.py  test_repository.py
(+310 files in other folders)
