[project]
name = "training-log-app"
version = "0.1.0"
description = "App to record dog training activites with their owners"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.115.12",
    "fastapi-utils>=0.8.0",
    "httpx>=0.28.1",
    "numpy>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pytest-cov>=6.1.1",
    "python-dotenv>=1.0.1",
    "typing-inspect>=0.9.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.uv.workspace]
members = ["src/auth"]
